Added a 'play-button'

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -25,6 +25,16 @@
 				<a class="alternate menu-anchor" href="#"><li class="alternate menu-item">About</li></a>
 			</ul> <!-- End of alternate menu -->
 		</div> <!-- End of fixed-top-menu-bar -->
+<!-- Play button -->
+		<div class="play-button">
+			<h4 class="button-text">Play</h4>
+		</div>
+<!-- Character Panel -->
+		<div class="character-selection-panel">
+			<div class="character-card"></div>
+			<div class="character-card"></div>
+			<div class="character-card"></div>
+		</div>
 
 	</div><!-- End of homepage-wrapper -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
