Added 'character-selection-panel' (with accompanying 'character-cards') and added 'level-selection-panel' (with accompanying 'level-cards')

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -29,12 +29,19 @@
 		<div class="play-button">
 			<h4 class="button-text">Play</h4>
 		</div>
-<!-- Character Panel -->
+<!-- Character Panels -->
 		<div class="character-selection-panel">
-			<div class="character-card"></div>
-			<div class="character-card"></div>
-			<div class="character-card"></div>
+			<div class="knight character-card">KNIGHT</div>
+			<div class="archer character-card">ARCHER</div>
+			<div class="mage character-card">MAGE</div>
 		</div>
+<!-- Level Panels -->
+		<div class="level-selection-panel">
+			<div class="cave level-card">CAVE</div>
+			<div class="forrest level-card">FORREST</div>
+			<div class="city level-card">CITY</div>
+		</div>
+
 
 	</div><!-- End of homepage-wrapper -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
