Added id-tag onto the level selection cards

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -37,9 +37,9 @@
 		</div>
 <!-- Level Panels -->
 		<div class="level-selection-panel">
-			<div class="cave level-card">CAVE</div>
-			<div class="forrest level-card">FORREST</div>
-			<div class="city level-card">CITY</div>
+			<div id="cave" class="cave level-card">CAVE</div>
+			<div id="forrest" class="forrest level-card">FORREST</div>
+			<div id="city" class="city level-card">CITY</div>
 		</div>
 
 
