Added 'text-box-containers' and 'text-promots' to the html file (to replace the JS alerts)

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -29,6 +29,16 @@
 		<div class="play-button">
 			<h4 class="button-text">Play</h4>
 		</div>
+<!-- text-boxes -->
+		<div class="character-select textbox-container">
+			<h4 class="textbox-prompt">Welcome to Mythos. please select a character from the following CHARACTER SELECTION PANEL below. Read the character's DOSSIER and CHARACTER ABILITY to make your choice. Who knows what which mythical beast you may encounter!</h4>
+		</div>
+		<div class="level-select textbox-container">
+			<h4 class="textbox-prompt">You have selected the _____. ________ _______ ________ ______ ___ _____ _____ ____ _____. Please select a level from the following LEVEL SELECTION PANEL. Your Quest awaits!</h4>
+		</div>
+		<div class="combat textbox-container">
+			<h4 class="textbox-prompt">Combat Combat Combat! Combat Combat Combat! Combat Combat Combat! Combat Combat Combat!</h4>
+		</div>
 <!-- Character Panels -->
 		<div class="character-selection-panel">
 			<div class="knight character-card">KNIGHT</div>
@@ -41,6 +51,14 @@
 			<div id="forrest" class="forrest level-card">FORREST</div>
 			<div id="city" class="city level-card">CITY</div>
 		</div>
+<!-- combat cards -->
+		<div class="combat-card-stage">
+		</div>
+		<div class="boss combat-card">
+		</div>
+		<div class="user combat-card-">
+		</div>
+
 
 
 	</div><!-- End of homepage-wrapper -->
