Updated user and boss combat-cards

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -73,19 +73,45 @@
 			    <div id="user-character" class="user combat-card">
 			    	<div class="user character-image"></div>
 			    	<div class="user character-content-panel">
-			    		<div class="user moves-button">Move 1</div>
-				    	<div class="user moves-button">Move 2</div>
-				    	<div class="user moves-button">Move 3</div>
-				    	<div class="user moves-button">Move 4</div>
+			    		<div class="user moves-button">
+			    			<p class="user move-name">Move 1</p>
+			    			<p class="user move-counter">5/5</p>
+			    		</div>
+			    		<div class="user moves-button">
+			    			<p class="user move-name">Move 2</p>
+			    			<p class="user move-counter">10/10</p>
+			    		</div>
+			    		<div class="user moves-button">
+			    			<p class="user move-name">Move 3</p>
+			    			<p class="user move-counter">5/5</p>
+			    		</div>
+			    		<div class="user moves-button">
+			    			<p class="user move-name">Move 4</p>
+			    			<p class="user move-counter">1/1</p>
+			    		</div>
 			    	</div>
 			    </div>
 			    <div id="randomized-character" class="boss combat-card">
 			    	<div class="boss character-image"></div>
 			    	<div class="boss character-content-panel">
-			    		<div class="boss moves-button">Boss Move 1</div>
-				    	<div class="boss moves-button">Boss Move 2</div>
-				    	<div class="boss moves-button">Boss Move 3</div>
-				    	<div class="boss moves-button">Boss Move 4</div>
+			    		<div class="boss character-content-panel">
+			    		<div class="boss moves-button">
+			    			<p class="boss move-name">Move 1</p>
+			    			<p class="boss move-counter">5/5</p>
+			    		</div>
+			    		<div class="boss moves-button">
+			    			<p class="boss move-name">Move 2</p>
+			    			<p class="boss move-counter">10/10</p>
+			    		</div>
+			    		<div class="boss moves-button">
+			    			<p class="boss move-name">Move 3</p>
+			    			<p class="boss move-counter">5/5</p>
+			    		</div>
+			    		<div class="boss moves-button">
+			    			<p class="boss move-name">Move 4</p>
+			    			<p class="boss move-counter">1/1</p>
+			    		</div>
+			    	</div>
 			    	</div>
 			    </div>	    
 			</div>
