Updated HTML by deleting the 'hero character cards' and 'villain charactercards' (since I will use JS to enerate the templates)

--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -12,8 +12,8 @@
 				<div class="mobile-menu-button"></div>
 			</div> <!--End of Menu Container -->
 			<ul class="mobile-menu">
-				<a class="mobile-menu-anchor" href="#"><li class="mobile-menu-item">Home Screen</li></a>
-				<a class="mobile-menu-anchor" href="#"><li class="mobile-menu-item">About</li></a>
+				<a class="mobile-menu-anchor" href="#"><li class="mobile-menu-item">Restart Quest</li></a>
+				<a class="mobile-menu-anchor" href="#"><li class="mobile-menu-item">About Mythos</li></a>
 			</ul> <!-- End of mobile Drop Down Menu -->
 			<div class="top-menu-header">
 				<p class="mobile-header">Mythos</p>
@@ -59,67 +59,23 @@
 		</div> 
 <!-- combat cards -->
 		<div class="combat section">
-			<div class="combat-1 textbox-container">
-				<h4 class="combat-1 textbox-prompt">Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 !</h4>
+			<div class="combat textbox-container">
+				<h4 class="first combat textbox-prompt">Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 !</h4>
 				<div class="first combat-continue-button">Continue</div>
-			</div>
-			<div class="combat-2 textbox-container">
-				<h4 class="combat textbox-prompt">Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 Combat-2 !</h4>
+				<h4 class="second combat textbox-prompt">Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1 Combat-1!</h4>
 				<div class="second combat-continue-button">Continue</div>
-			</div> 
+			</div>
 			<div class="combat-stage">
 <!-- Center Stage Card -->
 				<div id="stage" class="stage combat-card">Defend yourself!</div>
 <!-- User-Selected Character combat-card -->
-			    <div id="hero-character" class="hero combat-card">
-			    	<div class="hero character-name"></div>
-			    	<div class="hero character-image"></div>
-		    		<div class="hero character-content-panel">
-		    			<div class="hero moves-button">
-			    			<p class="hero move-1 move-name"></p>
-			    			<p class="hero counter-1 move-counter"></p>
-			    		</div>
-			    		<div class="hero moves-button">
-			    			<p class="hero move-2 move-name"></p>
-			    			<p class="hero counter-2 move-counter"></p>
-			    		</div>
-			    		<div class="hero moves-button">
-			    			<p class="hero move-3 move-name"></p>
-			    			<p class="hero counter-3 move-counter"></p>
-			    		</div>
-			    		<div class="hero moves-button">
-			    			<p class="hero move-4 move-name"></p>
-			    			<p class="hero counter-4 move-counter"></p>
-			    		</div>
-			   		</div>
-			    </div>
+			    <div id="hero-character" class="hero combat-card"></div>
 <!-- Randomized Villain combat-card -->
-			    <div id="randomized-character" class="villain combat-card">
-			    	<div class="villain character-name"></div>
-			    	<div class="villain character-image"></div>
-		    		<div class="villain character-content-panel">
-		    			<div class="villain moves-button">
-			    			<p class="villain move-1 move-name">Move 1</p>
-			    			<p class="villain counter-1 move-counter">5/5</p>
-			    		</div>
-			    		<div class="villain moves-button">
-			    			<p class="villain move-2 move-name">Move 2</p>
-			    			<p class="villain counter-2 move-counter">10/10</p>
-			    		</div>
-			    		<div class="villain moves-button">
-			    			<p class="villain move-3 move-name">Move 3</p>
-			    			<p class="villain counter-3 move-counter">5/5</p>
-			    		</div>
-			    		<div class="villain moves-button">
-			    			<p class="villain move-4 move-name">Move 4</p>
-			    			<p class="villain counter-4 move-counter">1/1</p>
-			    		</div>
-		    		</div>
-		    	</div><!-- End of villain combat-card -->
-			    </div> <!-- End of Combat stage -->    
-			</div>
+			    <div id="randomized-character" class="villain combat-card"></div>
+			</div> <!-- End of Combat stage -->    
 		</div>
 	</div><!-- End of homepage-wrapper -->
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
