--- a/mythos-homepage.html
+++ b/mythos-homepage.html
@@ -72,8 +72,8 @@
 			    <div id="hero-character" class="hero combat-card"></div>
 <!-- Randomized Villain combat-card -->
 			    <div id="randomized-character" class="villain combat-card"></div>
-			</div> <!-- End of Combat stage -->    
-		</div>
+			</div> <!-- End of Combat-stage -->    
+		</div><!-- End of Combat Section -->
 	</div><!-- End of homepage-wrapper -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
